--- a/AppleWatchHeartRateCollection/Base.lproj/Main.storyboard
+++ b/AppleWatchHeartRateCollection/Base.lproj/Main.storyboard
@@ -78,10 +78,10 @@
             </objects>
             <point key="canvasLocation" x="386" y="41"/>
         </scene>
-        <!--Menu View Controller-->
+        <!--Menu-->
         <scene sceneID="gHx-xW-CKA">
             <objects>
-                <viewController title="Menu View Controller" id="81z-e2-JjQ" customClass="MenuViewController" customModule="AppleWatchHeartRateCollection" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="81z-e2-JjQ" customClass="MenuViewController" customModule="AppleWatchHeartRateCollection" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="wbo-Tv-vjr">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -107,21 +107,51 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bnc-mk-0sC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1414" y="1049"/>
+            <point key="canvasLocation" x="1414" y="1254"/>
         </scene>
-        <!--Tasks View Controller-->
-        <scene sceneID="zYT-7x-Tbq">
+        <!--Tasks-->
+        <scene sceneID="MKV-8X-rxZ">
             <objects>
-                <viewController title="Tasks View Controller" id="hbb-JY-t1K" customClass="TasksViewController" customModule="AppleWatchHeartRateCollection" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="06g-4o-Imi">
+                <tableViewController id="AAh-0u-5Vp" customClass="TasksViewController" customModule="AppleWatchHeartRateCollection" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="ZQg-Ql-XjK">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="XSJ-UQ-5C5"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Tasks" image="tab_activities" id="nDv-IL-PSH"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="1tj-w5-qYa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="L4O-z0-We6">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="L4O-z0-We6" id="lqB-KL-v7s">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="AAh-0u-5Vp" id="JwK-ng-C6X"/>
+                            <outlet property="delegate" destination="AAh-0u-5Vp" id="c8m-AO-0fd"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Tasks" id="qkM-2V-FMc"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Lcb-YD-zsf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2222" y="373"/>
+        </scene>
+        <!--Tasks-->
+        <scene sceneID="MkM-s9-D4S">
+            <objects>
+                <navigationController title="Tasks" id="VhS-iP-NCP" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Tasks" image="tab_activities" id="k8P-4t-Uk2"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="wmk-hO-mNQ">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="AAh-0u-5Vp" kind="relationship" relationship="rootViewController" id="sRq-WD-czE"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="v0u-dJ-ovK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1414" y="373"/>
         </scene>
@@ -135,7 +165,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="hbb-JY-t1K" kind="relationship" relationship="viewControllers" id="lEE-jX-lFQ"/>
+                        <segue destination="VhS-iP-NCP" kind="relationship" relationship="viewControllers" id="ayq-Fk-cFw"/>
                         <segue destination="81z-e2-JjQ" kind="relationship" relationship="viewControllers" id="MWM-Zt-BCv"/>
                     </connections>
                 </tabBarController>
